<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="80dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/consuming_web_apis"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_data" />

        <Button
            android:id="@+id/btnPOST"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_data" />

        <Button
            android:id="@+id/nextActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_activity" />

        <Button
            android:id="@+id/getUID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_unique_id" />

        <Button
            android:id="@+id/btnRESTFulAPI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restful_api_test" />

    
</LinearLayout>